--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SpaceShooterSample">
         <activity
-            android:name=".PopUpWindow"
-            android:exported="false" />
+            android:name=".ListOfRecords"
+            android:exported="false"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -26,7 +27,11 @@
         <activity
             android:name=".GameActivity"
             android:exported="true"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Settings"
+            android:exported="true"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
